@@ -142,6 +142,9 @@ FILE-FORMAT-V4:
 - não deve fazer som de pulo ao finalizar um teleporte
 - a flecha de diálogo só deve aparecer quando todas as frases forem escritas
 - in-game manual
+- colocar no manual características de cada personagem (pulo carregado, slide, etc)
+- colocar no manual, dica que dash + pulo vai mais longe
+- mudar audio enabled/disabled para uma única opção (on/off)
 
 
 
